--- a/Sentinel-1.8.0/sentinel-dashboard/pom.xml
+++ b/Sentinel-1.8.0/sentinel-dashboard/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.boot.version>2.0.5.RELEASE</spring.boot.version>
         <curator.version>4.0.1</curator.version>
+        <nacos.version>1.3.0</nacos.version>
     </properties>
 
     <dependencies>
@@ -135,6 +136,11 @@
         	<artifactId>system-rules</artifactId>
         	<version>1.16.1</version>
         	<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>${nacos.version}</version>
         </dependency>
     </dependencies>
 
